# xvm

./: .gitignore  CMakeLists.txt
XASM/: Makefile  xasm  xasm.cpp
XSC/: 15_04.dsp  15_04.dsw  Makefile  TEST.XASM  code_emit.cpp  code_emit.h  error.cpp  error.h  func_table.cpp  func_table.h  globals.h  i_code.cpp  i_code.h  lexer.cpp  lexer.h  linked_list.cpp  linked_list.h  parser.cpp  parser.h  preprocessor.cpp  preprocessor.h  stack.cpp  stack.h  string_table.h  symbol_table.cpp  symbol_table.h  xsc  xsc.cpp  xsc.h
XVM-Console/: Makefile  README.md  TEST.XASM  TEST.XSE  TEST1.XASM  TEST1.XSE  TEST1.XSS  XVM Console.dsp  XVM Console.dsw  console.cpp  hello.xss  make.sh  xvm-console  xvm.cpp  xvm.h
